--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -13,8 +13,11 @@
 
   <%= form_for @order, url: orders_path do |f| %>
     <%= f.hidden_field :name %>
-    <div class="d-grid col-md-6 mx-auto">
+    <div class="d-grid col-md-6 mx-auto mb-3">
       <%= f.button 'OK', class: 'btn btn-lg btn-primary' %>
+    </div>
+    <div class="d-grid col-md-6 mx-auto">
+      <%= f.button '戻る', value: 'back', class: 'btn btn-lg btn-secondary' %>
     </div>
   <% end %>
 </div>
