--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -9,10 +9,34 @@
       </div>
       <%= @order.name %>
     </div>
+
+    <div class="mb-3">
+      <div class="form-label border-start border-primary border-4 ps-1">
+        <%= t('activerecord.attributes.order.email') %>
+      </div>
+      <%= @order.email %>
+    </div>
+
+    <div class="mb-3">
+      <div class="form-label border-start border-primary border-4 ps-1">
+        <%= t('activerecord.attributes.order.telephone') %>
+      </div>
+      <%= @order.telephone %>
+    </div>
+
+    <div class="mb-3">
+      <div class="form-label border-start border-primary border-4 ps-1">
+        <%= t('activerecord.attributes.order.delivery_address') %>
+      </div>
+      <%= @order.delivery_address %>
+    </div>
   </div>
 
   <%= form_for @order, url: orders_path do |f| %>
     <%= f.hidden_field :name %>
+    <%= f.hidden_field :email %>
+    <%= f.hidden_field :telephone %>
+    <%= f.hidden_field :delivery_address %>
     <div class="d-grid col-md-6 mx-auto mb-3">
       <%= f.button 'OK', class: 'btn btn-lg btn-primary' %>
     </div>
