--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -9,6 +9,27 @@
       </div>
     </div>
 
+    <div class="col-md-6 mx-auto mb-5">
+      <div class="mb-3">
+        <%= f.label :email, class: 'form-label border-start border-primary border-4 ps-1' %>
+        <%= f.text_field :email, size: 100, placeholder: 'sample@example.com', class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="col-md-6 mx-auto mb-5">
+      <div class="mb-3">
+        <%= f.label :telephone, class: 'form-label border-start border-primary border-4 ps-1' %>
+        <%= f.text_field :telephone, size: 40, placeholder: '0312345678', class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="col-md-6 mx-auto mb-5">
+      <div class="mb-3">
+        <%= f.label :delivery_address, class: 'form-label border-start border-primary border-4 ps-1' %>
+        <%= f.text_field :delivery_address, size: 40, placeholder: 'お届け先の住所をご入力ください', class: 'form-control' %>
+      </div>
+    </div>
+
     <div class="d-grid col-md-6 mx-auto">
       <%= f.button '確認画面へ', class: 'btn btn-lg btn-primary' %>
     </div>
