完了画面に名前を表示しリロードすると入力画面にリダイレクト

--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -3,6 +3,8 @@
 
   <div class="text-center mb-5">
     <p>
+      <%= @order.name %>様
+      <br>
       ご注文ありがとうございました。
       <br>
       商品の発送まで今しばらくお待ちください。
