--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -29,6 +29,12 @@
         <%= f.select :payment_method_id, PaymentMethod.selectable_methods, { include_blank: true }, class: 'form-select' %>
         <%= render partial: 'shared/error_messages', locals: { record: @order, symbol: :payment_method_id } %>
       </div>
+
+      <div class="mb-3">
+        <%= f.label :other_comment, class: 'form-label border-start border-primary border-4 ps-1' %>
+        <%= f.text_area :other_comment, size: '60x6', placeholder: 'その他、ご要望がありましたらご入力ください。', class: 'form-control' %>
+        <%= render partial: 'shared/error_messages', locals: { record: @order, symbol: :other_comment } %>
+      </div>
     </div>
 
     <div class="d-grid col-md-6 mx-auto">
