--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,5 +1,5 @@
 <div class="container" mt-3 mb-5>
-  <h1 class="text^center mb-5">注文内容の確認</h1>
+  <h1 class="text-center mb-5">注文内容の確認</h1>
 
   <div class="col-md-6 mx-auto mb-5">
     <p>以下の内容でよろしいでしょうか？</p>
