メールマガジン配信を希望するかしないかのラジオボタンの追加

--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -46,6 +46,12 @@
         <span class="text-secondary">（未記入）</span>
       <% end %>
     </div>
+    <div class="mb-3">
+      <div class="form-label border-start border-primary border-4 ps-1">
+        <%= t('activerecord.attributes.order.direct_mail_enabled') %>
+      </div>
+      <%= @order.direct_mail_enabled_text %>
+    </div>
   </div>
 
   <%= form_for @order, url: orders_path do |f| %>
@@ -55,6 +61,7 @@
     <%= f.hidden_field :delivery_address %>
     <%= f.hidden_field :payment_method_id %>
     <%= f.hidden_field :other_comment %>
+    <%= f.hidden_field :direct_mail_enabled %>
     <div class="d-grid col-md-6 mx-auto mb-3">
       <%= f.button 'OK', class: 'btn btn-lg btn-primary' %>
     </div>
