注文内容のテーブルと商品・数量の2カラムの追加と表示

--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -36,6 +36,28 @@
       </div>
       <%= @order.payment_method.name %>
     </div>
+    
+    <div class="mb-3">
+      <div class="form-label border-start border-primary border-4 ps-1">
+        <%= t('activerecord.attributes.order.order_products') %>
+      </div>
+      <% @order.order_products.each do |order_product| %>
+        <div class="border border-secondary border-1 rounded p-3 mb-3">
+          <div class="mb-3">
+            <div class="form-label border-start border-primary border-4 ps-1">
+              <%= t('activerecord.attributes.order_product.product_id') %>
+            </div>
+            <%= order_product.name%>
+
+            <div class="form-label border-start border-primary border-4 ps-1">
+              <%= t('activerecord.attributes.order_product.quantity') %>
+            </div>
+            <%= order_product.quantity%>
+          </div>          
+        </div>
+      <% end %>
+    </div>
+
     <div class="mb-3">
       <div class="form-label border-start border-primary border-4 ps-1">
         <%= t('activerecord.attributes.order.other_comment') %>
@@ -71,6 +93,11 @@
 
     <% @order.inflow_source_ids.each do |inflow_source_id| %>
       <%= hidden_field_tag 'order[inflow_source_ids][]', inflow_source_id %>
+    <% end %>
+
+    <%= f.fields_for :order_products do |pf| %>
+      <%= pf.hidden_field :product_id %>
+      <%= pf.hidden_field :quantity %>
     <% end %>
 
     <div class="d-grid col-md-6 mx-auto mb-3">
