--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container" mt-3 mb-5>
+<div class="container mt-3 mb-5">
   <h1 class="text-center mb-5">注文フォーム</h1>
 
   <%= form_for @order, url: confirm_orders_path do |f| %>
