商品の合計を計算するロジックを追加

--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -47,15 +47,16 @@
             <div class="form-label border-start border-primary border-4 ps-1">
               <%= t('activerecord.attributes.order_product.product_id') %>
             </div>
-            <%= order_product.name%>
+            <%= order_product.name_and_price_text %>
 
             <div class="form-label border-start border-primary border-4 ps-1">
               <%= t('activerecord.attributes.order_product.quantity') %>
             </div>
-            <%= order_product.quantity%>
+            <%= order_product.quantity %>
           </div>          
         </div>
       <% end %>
+      <span class="fs-5 fw-bold"><%= number_to_currency(@order.total_price) %>(税込み)</span>
     </div>
 
     <div class="mb-3">
