--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -1,4 +1,4 @@
-<div class="container" mt-3 mb-5>
+<div class="container mt-3 mb-5">
   <h1 class="text-center mb-5">注文完了</h1>
 
   <div class="text-center mb-5">
