メールのテストコード作成

--- a/app/views/order_mailer/mail_to_user.html.erb
+++ b/app/views/order_mailer/mail_to_user.html.erb
@@ -7,16 +7,16 @@
 <br>
 [注文内容]<br>
 <% @order.order_products.each do |order_product| %>
-<%= t('activerecord.attributes.order_product.product_id') %>:<%= order_product.name_and_price_text %><br>
-<%= t('activerecord.attributes.order_product.quantity') %>:<%= order_product.quantity %><br>
+<%= t('activerecord.attributes.order_product.product_id') %>: <%= order_product.name_and_price_text %><br>
+<%= t('activerecord.attributes.order_product.quantity') %>: <%= order_product.quantity %><br>
 <% end %>
-合計金額： <%= number_to_currency(@order.total_price) %>(税込)<br>
+合計金額: <%= number_to_currency(@order.total_price) %>(税込)<br>
 <br>
-<%= t('activerecord.attributes.order.payment_method_id') %>:<%= @order.payment_method_id %><br>
-<%= t('activerecord.attributes.order.delivery_address') %>:<%= @order.delivery_address %><br>
-<%= t('activerecord.attributes.order.telephone') %>:<%= @order.telephone %><br>
-<%= t('activerecord.attributes.order.other_comment') %>:<%= @order.other_comment %><br>
-<%= t('activerecord.attributes.order.direct_mail_enabled') %>:<%= @order.direct_mail_enabled %><br>
+<%= t('activerecord.attributes.order.payment_method_id') %>: <%= @order.payment_method.name %><br>
+<%= t('activerecord.attributes.order.delivery_address') %>: <%= @order.delivery_address %><br>
+<%= t('activerecord.attributes.order.telephone') %>: <%= @order.telephone %><br>
+<%= t('activerecord.attributes.order.other_comment') %>: <%= @order.other_comment %><br>
+<%= t('activerecord.attributes.order.direct_mail_enabled') %>: <%= @order.direct_mail_enabled_text %><br>
 <br>
 -----------------------------------<br>
 楽しい果物ファーム<br>
